Add upload image method
